--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="Practicum, pictures, travel" />
     <meta name="author" content="Katia Timm" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="icon" href="./favicon.ico=[[" />
+    <link rel="icon" href="./favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,7 +20,37 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <div></div>
+  <body class="page">
+    <div class="page__content">
+      <header class="header page__section">
+        <img class="logo" src="./images/logo.svg" alt="Around the U.S logo" />
+      </header>
+      <main class="content">
+        <section class="profile page__section">
+          <img
+            src="./images/jacques-cousteau.jpg"
+            alt="avatar"
+            class="profile__image"
+          />
+          <div class="profile__info">
+            <h1 class="profile__title">Jacques Cousteau</h1>
+            <button class="profile__edit-button"></button>
+            <p class="profile__description">Explorer</p>
+          </div>
+          <button class="profile__add-button"></button>
+        </section>
+        <section class="cards">
+          <ul class="card__list">
+            <li class="card">
+              <img
+                src="../se_project_aroundtheus/images/yosemite.jpg"
+                class="card__image"
+              />
+            </li>
+          </ul>
+        </section>
+      </main>
+      <footer class="footer"></footer>
+    </div>
   </body>
 </html>
