--- a/index.html
+++ b/index.html
@@ -12,15 +12,8 @@
     <meta name="keywords" content="Practicum, pictures, travel" />
     <meta name="author" content="Katia Timm" />
     <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="stylesheet" href="./vendor/fonts.css" />
     <link rel="icon" href="./favicon.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;900&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body class="page">
     <div class="page__content">
