--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button"></button>
+            <button
+              class="profile__edit-button profile__buttons-active"
+            ></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__add-button"></button>
+          <button class="profile__add-button profile__buttons-active"></button>
         </section>
         <section class="cards page__section">
           <ul class="card__list">
@@ -67,9 +69,7 @@
             <li class="card">
               <img src="./images/vanoise.jpg" class="card__image" />
               <div class="card__description">
-                <h2 class="card__title card__title-block">
-                  Vanoise National Park
-                </h2>
+                <h2 class="card__title">Vanoise National Park</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
