--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <button class="profile__add-button profile__buttons-active"></button>
         </section>
         <section class="cards page__section">
-          <ul class="card__list">
+          <ul class="cards__list">
             <li class="card">
               <img
                 src="./images/yosemite.jpg"
