--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
             <button
+              aria-label="edit"
               class="profile__edit-button profile__buttons-active"
             ></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__add-button profile__buttons-active"></button>
+          <button
+            aria-label="add"
+            class="profile__add-button profile__buttons-active"
+          ></button>
         </section>
         <section class="cards page__section">
           <ul class="cards__list">
@@ -45,7 +49,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Yosemite Valley</h2>
-                <button class="card__like-button"></button>
+                <button aria-label="like" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -56,7 +60,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lake Louise</h2>
-                <button class="card__like-button"></button>
+                <button aria-label="like" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -67,7 +71,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Bald Mountains</h2>
-                <button class="card__like-button"></button>
+                <button aria-label="like" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -78,7 +82,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Latemar</h2>
-                <button class="card__like-button"></button>
+                <button aria-label="like" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -89,7 +93,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Vanoise National Park</h2>
-                <button class="card__like-button"></button>
+                <button aria-label="like" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -100,7 +104,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lago di Braies</h2>
-                <button class="card__like-button"></button>
+                <button aria-label="like" class="card__like-button"></button>
               </div>
             </li>
           </ul>
