remove right marging on image for mobile and add type attribute to button elements

--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
             <button
+              type="submit"
               aria-label="edit"
               class="profile__edit-button profile__buttons-active"
             ></button>
             <p class="profile__description">Explorer</p>
           </div>
           <button
+            type="submit"
             aria-label="add"
             class="profile__add-button profile__buttons-active"
           ></button>
@@ -49,7 +51,11 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Yosemite Valley</h2>
-                <button aria-label="like" class="card__like-button"></button>
+                <button
+                  type="button"
+                  aria-label="like"
+                  class="card__like-button"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -60,7 +66,11 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lake Louise</h2>
-                <button aria-label="like" class="card__like-button"></button>
+                <button
+                  type="button"
+                  aria-label="like"
+                  class="card__like-button"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -71,7 +81,11 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Bald Mountains</h2>
-                <button aria-label="like" class="card__like-button"></button>
+                <button
+                  type="button"
+                  aria-label="like"
+                  class="card__like-button"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -82,7 +96,11 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Latemar</h2>
-                <button aria-label="like" class="card__like-button"></button>
+                <button
+                  type="button"
+                  aria-label="like"
+                  class="card__like-button"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -93,7 +111,11 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Vanoise National Park</h2>
-                <button aria-label="like" class="card__like-button"></button>
+                <button
+                  type="button"
+                  aria-label="like"
+                  class="card__like-button"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -104,7 +126,11 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lago di Braies</h2>
-                <button aria-label="like" class="card__like-button"></button>
+                <button
+                  type="button"
+                  aria-label="like"
+                  class="card__like-button"
+                ></button>
               </div>
             </li>
           </ul>
