change button type of buttons in profile section to type=button

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
             <button
-              type="submit"
+              type="button"
               aria-label="edit"
               class="profile__edit-button profile__buttons-active"
             ></button>
             <p class="profile__description">Explorer</p>
           </div>
           <button
-            type="submit"
+            type="button"
             aria-label="add"
             class="profile__add-button profile__buttons-active"
           ></button>
