style modal for figma desktop

--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
         <button type="button" aria-label="close" class="modal__close"></button>
         <p class="modal__heading">Edit profile</p>
         <form class="modal__form">
-          <input type="text" name="title" />
-          <input type="text" name="description" />
-          <button type="button" aria-label="save" class="modal__button">
+          <input type="text" name="title" class="modal__input" />
+          <input type="text" name="description" class="modal__input" />
+          <button type="button" aria-label="save" class="modal__save">
             Save
           </button>
         </form>
