add placeholder text to form

--- a/index.html
+++ b/index.html
@@ -145,8 +145,18 @@
         <button type="button" aria-label="close" class="modal__close"></button>
         <p class="modal__heading">Edit profile</p>
         <form class="modal__form">
-          <input type="text" name="title" class="modal__input" />
-          <input type="text" name="description" class="modal__input" />
+          <input
+            type="text"
+            name="title"
+            class="modal__input"
+            placeholder="Name"
+          />
+          <input
+            type="text"
+            name="description"
+            class="modal__input"
+            placeholder="About me"
+          />
           <button type="button" aria-label="save" class="modal__save">
             Save
           </button>
