change description input placeholder

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             type="text"
             name="description"
             class="modal__input"
-            placeholder="About me"
+            placeholder="Description"
           />
           <button type="button" aria-label="save" class="modal__save">
             Save
