code review refactor #1

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           id="modal-close-button"
         ></button>
         <p class="modal__title">Edit profile</p>
-        <form class="modal__form">
+        <form name="profile-edit-form" class="modal__form">
           <input
             type="text"
             name="title"
